--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "english-ipa"
-version = "0.2.1"
+version = "0.3.0"
 description = ""
 authors = ["adaxiang <adaxiang3104@gmail.com>"]
 readme = "README.md"
@@ -10,6 +10,7 @@ python = "^3.12"
 beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
 pydantic = "^2.8.2"
+aiohttp = "^3.10.2"
 
 
 [build-system]
